[metadata]
name = echo-lang
author = elemental9
summary = A code os.
license = Apache Software License
description-file = ../README.md
home-page = https://github.com/elemental9/Echo
requires-python = >=3.0
classifier = 
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[files]
packages =
    echo_lang
