[metadata]
name = echo-lang
author = elemental9
license = Apache Software License
description = A code os.
url = https://github.com/elemental9/Echo
requires-python = >=3.0
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Natural Language :: English
    Programming Language :: Python
    Operating System :: OS Independent
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages =
    echo_lang
install_requires =
    quilt_lang ~= 0.5.1
